# timon_hm_manipulator

./: README.md
devel/: .catkin
doc/: Teste_pose_semdeteccao  Testesrr.txt  press_button_gazebo-2020-04-15_11.44.17.mkv  press_button_rviz-2020-04-15_11.47.45.mkv  rotacoes_caixa.txt  test3_gazebo-2020-04-15_15.22.03.mkv  test9_gazebo-2020-04-15_18.20.20.mkv  testes_pose1_comdeteccao.txt  testes_pose2_comdeteccao.txt
jerotimon_2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
jerotimon_2_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  timon.srdf
jerotimon_2_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  timon_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
jerotimon_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
jerotimon_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  timon.srdf
jerotimon_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  timon_moveit_controller_manager.launch.xml  timon_planning_execution.launch  trajectory_execution.launch.xml  warehouse.launch
manipulator_description/: CMakeLists.txt
manipulator_description/config/: joints.yaml
manipulator_description/launch/: world.launch
manipulator_description/meshes/: basem.dae  basem.stl  botao.dae  botao.stl  box.dae  box.stl  box_aruco.dae  box_aruco.stl  button.dae  button.stl  caixa.dae  caixa.stl  cam.dae  cam.stl  camera.stl  elo1.dae  elo2.dae  elo2_onepiece.dae  frame4.dae  motor2.dae  motor3R.dae  table.dae  table.stl  tag.dae
manipulator_description/robots/: arm.urdf.xacro  base.xacro  camera.xacro  hand.xacro  lente.xacro  tag.xacro  timon.urdf  timon_arm.urdf.xacro  timon_arm.xacro  timon_arm_hand.urdf.xacro  timon_arm_hand_base.urdf.xacro
manipulator_description/rviz/: config.rviz
manipulator_description/urdf/: base.xacro  botao.xacro  botao_horizontal.xacro  botao_vertical.xacro  box.urdf.xacro  box_aruco.xacro  box_horizontal.urdf.xacro  box_vertical.urdf.xacro  caixa.xacro  caixa_vertical.xacro  challenger.xacro  manipulator.urdf  robot_diff.gv  table_box.xacro  tag.xacro  tag_horizontal.xacro  tag_vertical.xacro  timon.urdf
manipulator_gazebo/: CMakeLists.txt  package.xml
manipulator_gazebo/launch/: box_real.launch  gazebo.launch  gazebo2.launch  moveit_demo.launch  moveit_demo5.launch  rviz.launch  spawn.launch  spawn_box.launch
manipulator_gazebo/world/: challenger.world
manipulator_gazebo/worlds/: mesa.world
src/: README.md
src/table_challenge/: CMakeLists.txt  package.xml
timon4_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
timon4_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml  timon.srdf
timon4_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  timon_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
timon5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
timon5_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  timon.srdf
timon5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  timon_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
timon_arm_controller/: CMakeLists.txt  package.xml
timon_arm_controller/config/: dxl_joints.yaml
timon_arm_controller/launch/: dxl_controllers.launch  dxl_moveit_bridge.launch  moveit.launch
timon_demo/: CMakeLists.txt  package.xml
timon_demo/config/: basic.yaml  config_marker.yaml  config_simulation.yaml  joint_trajectory_controller.yaml  joints.yaml
timon_demo/launch/: bir_marker_localization.launch  bir_open_manipulator_p_controller.launch  bir_open_manipulator_p_moveit.launch  controller_utils.launch  dynamixel_controller.launch  joint_tests.launch  joint_trajectory_controller.launch  motion_plan.launch  motion_plan5.launch  moveit_commander.launch  push_button.launch  push_button_real.launch  push_button_simulation.launch
timon_demo/src/: add_objects.cpp  joint_tests.cpp  motion_plan.cpp  motion_plan5.cpp  pose_tests.cpp  push_button.cpp  push_button_2.cpp  push_button_3.cpp  push_button_4.cpp  push_button_real.cpp  push_button_real_2.cpp  push_button_real_4.cpp  tf_listener.cpp  trajectory_server.cpp
timon_moveit/: .setup_assistant  CMakeLists.txt  package.xml
timon_moveit/config/: fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  (+1 more)
timon_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+103 files in other folders)
